restyled and fixed link issue on mobile menu

--- a/packages/navigate-theme/src/styles/layouts/_navigation.scss
+++ b/packages/navigate-theme/src/styles/layouts/_navigation.scss
@@ -154,7 +154,7 @@
       @include respond(phone) {
         margin-right: 0;
         margin-left: 0;
-        margin-top: -0.5rem;
+        margin-top: 1.2rem;
       }
 
       & > a {
@@ -206,7 +206,7 @@
       display: inline-block;
       font-size: 1.1rem;
       font-family: Nunito-Extrabold;
-      padding: 1rem 0.5rem;
+      padding: 1.7rem 0.5rem;
       color: $color-white;
       text-decoration: none;
       text-transform: uppercase;
